Name:                seqloc
Version:             0.1
Cabal-Version:       >= 1.2
License:             BSD3
Author:              Nick Ingolia
Maintainer:          nick@ingolia.org
Build-Type:          Simple

Category:            Bioinformatics

Flag Tests
  Description: Build test program
  Default:     False

Library
  Exposed-modules:     Bio.SeqLoc.Strand, Bio.SeqLoc.Position,
                       Bio.SeqLoc.SeqLike, Bio.SeqLoc.Location,
                       Bio.SeqLoc.SpliceLocation,
                       Bio.SeqLoc.OnSeq,
                       Bio.SeqLoc.LocRepr,
                       Bio.SeqLoc.Transcript
  Build-depends:       base, bytestring, haskell98, attoparsec >= 0.8.5
  Hs-Source-Dirs:      src
  Ghc-options:         -O2 -Wall

Executable test-seqloc
  if !flag(Tests)
     Buildable: False
  Main-is:             TestMain.hs
  Other-modules:       Bio.SeqLoc.Strand, Bio.SeqLoc.Position,
                       Bio.SeqLoc.SeqLike, Bio.SeqLoc.Location,
                       Bio.SeqLoc.SpliceLocation,
                       Bio.SeqLoc.OnSeq,
                       Bio.SeqLoc.LocRepr
  Build-depends:       base, bytestring, haskell98, attoparsec >= 0.8.5,
                       QuickCheck, random
  Hs-Source-Dirs:      src, test
  Ghc-options:         -O2 -Wall
